chore: fixed css linespacing

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -82,10 +82,7 @@ body {
   border: solid 2px transparent;
   cursor: text;
   height: 2.25rem;
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-  padding-top: 0.1875rem;
-  padding-bottom: 0.1875rem;
+  padding: 0.1875rem 0.375rem;
   width: 100%;
 }
 
@@ -151,7 +148,6 @@ span.svg {
 .s3 {
   width: 1.728rem;
   height: 1.728rem;
-
 }
 
 .s4 {
@@ -198,7 +194,7 @@ span.svg {
   display: inline-block;
   animation-duration: 0.9s;
   animation-iteration-count: infinite;
-  animation-timing-function: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  animation-timing-function: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   animation-name: bouncedelay;
   width: 27.8%;
   height: 27.8%;
@@ -251,7 +247,7 @@ span.svg {
   right: 0;
   bottom: 0;
   left: 0;
-  transition: all .25s var(--LogoLoader-transition-ease);
+  transition: all 0.25s var(--LogoLoader-transition-ease);
   fill: currentColor;
 }
 
@@ -269,14 +265,14 @@ span.svg {
 }
 
 .LogoLoader:hover .LogoLoader-z {
-  animation: pop .3s var(--LogoLoader-transition-ease);
+  animation: pop 0.3s var(--LogoLoader-transition-ease);
   animation-iteration-count: 2;
   animation-direction: alternate;
 }
 
 .LogoLoader-z {
   transform: scale(1, 1);
-  transition: all .25s var(--LogoLoader-transition-ease);
+  transition: all 0.25s var(--LogoLoader-transition-ease);
 }
 
 .LogoLoader .LogoLoader-logo {
@@ -295,43 +291,48 @@ span.svg {
 
 .LogoLoader.is-loading .LogoLoader-circle {
   animation: pulseBegin 1s infinite linear;
-  animation-delay: .1s;
+  animation-delay: 0.1s;
 }
 
 .LogoLoader.is-loading .LogoLoader-circlePulse {
   animation: pulse 1s infinite linear;
-  animation-delay: .1s;
+  animation-delay: 0.1s;
 }
 
 @keyframes pulseBegin {
   0% {
     transform: scale(1);
   }
+
   20% {
     transform: scale(.6);
   }
+
   40% {
     transform: scale(1.2);
   }
+
   60% {
     transform: scale(1);
   }
+
   100% {
     transform: scale(1);
   }
 }
 
 @keyframes bouncedelay {
-
-  0%, 90%, 100% {
+  0%,
+  100%,
+  90% {
     transform: scale(0, 0);
-    opacity: .1;
+    opacity: 0.1;
   }
+
   40% {
     transform: scale(0.05, 0.05);
     opacity: 1;
   }
-
 }
 
 @keyframes pulse {
@@ -339,17 +340,21 @@ span.svg {
     transform: scale(.6);
     opacity: 0;
   }
+
   20% {
     transform: scale(.6);
   }
+
   40% {
     transform: scale(1.2);
     opacity: 0.5;
   }
+
   60% {
     transform: scale(1.6);
     opacity: 0.7;
   }
+
   100% {
     transform: scale(2);
     opacity: 0.0;
@@ -397,7 +402,7 @@ a {
   text-decoration: none;
   background-color: transparent;
   color: @brand-primary;
-  transition: all .3s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 a:link,
@@ -1435,6 +1440,7 @@ dd {
 }
 
 //* move media queries here *//
+
 table {
   background-color: transparent;
 }
@@ -1952,7 +1958,7 @@ textarea.input-lg {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.15);
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .btn.focus,
@@ -1961,7 +1967,7 @@ textarea.input-lg {
   text-decoration: none;
   color: #333;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.15);
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .btn.active,
@@ -3585,9 +3591,9 @@ button.list-group-item {
 }
 
 .modal.fade .modal-dialog {
-  -webkit-transition: -webkit-transform .3s ease-out;
-  -o-transition: -o-transform .3s ease-out;
-  transition: transform .3s ease-out;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  -o-transition: -o-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
   -webkit-transform: translate(0, -25%);
   -ms-transform: translate(0, -25%);
   -o-transform: translate(0, -25%);
@@ -3642,7 +3648,7 @@ button.list-group-item {
 
 .modal-backdrop.in {
   filter: alpha(opacity=50);
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .modal-header {
@@ -3671,12 +3677,12 @@ button.list-group-item {
   padding: 15px;
   text-align: right;
   border-top: 0;
-  background:rgba(0, 0, 0, .05);
+  background: rgba(0, 0, 0, .05);
 }
 
 .modal-footer button {
   background-color: @brand-primary;
-  color:#fff;
+  color: #fff;
 }
 
 .modal-footer .btn + .btn {
@@ -4013,7 +4019,6 @@ button.close {
   padding-left: 2.03125em;
   padding-right: 0.375em;
   width: 50%;
-
 }
 
 .searchViewTheme .textInput .placeholder {
